--- a/Portofolio-Projects/index.html
+++ b/Portofolio-Projects/index.html
@@ -16,8 +16,8 @@
             <li>
                 <h1><a href=""> <i class="fa-brands fa-stack-overflow" aria-hidden="true"></i> <span>Anamaria Cojocaru</span> </a></h1>
             </li>
-            <li><a href="">Projects</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="" target="_blank" > <i class="fa-brands fa-linkedin" aria-hidden="true" ></i> <span class="sr-only">LinkedIn</span>  </a>
             </li>
@@ -36,6 +36,60 @@
 
     <div class="gradient"></div>
 
+    <div class="section-dkblue">
+    <section id="projects">
+        <h2>Projects i'm proud of</h2>
+        <article>
+        <div class="text">
+        <h4>Latest project</h4>
+        <h3>Wall of Wander</h3>
+        <p class="blackbox">Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere in the description. A link looks like <a href="https://frontendmasters.github.io/grid-flexbox-v2/">this</a>, and multiple links look <a href="#">like this</a> and <a href="#">like this</a>.</p>
+        <h4>Technologies used include:</h4>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+        </ul>
+        </div>
+        <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png" alt="Screenshot of the Wall of Wonder.">
+        </article>
+
+        <article class="reverse">
+            <div class="text">
+            <h4>Bootcamp Project</h4>
+            <h3>Feed-A-Star-Mole Game</h3>
+            <p class="blackbox">Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere
+                in the description. A link looks like <a href="https://frontendmasters.github.io/bootcamp/mole">this</a>, and multiple links look <a href="#">like this</a> and  <a href="#">like this</a>.</p>
+            <h4>Technologies used include:</h4>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JAVASCRIPT</li>
+            </ul>
+            </div>
+            <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-5.png" alt="Screenshot of the Frontend Masters Bootcamp.">
+        </article>
+
+        <article>
+            <div class="text">
+            <h4>Photography Project</h4>
+            <h3>Wall of Wonder Collection</h3>
+            <p class="blackbox">Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere
+                in the description. A link looks like <a href="https://frontendmasters.github.io/bootcamp/mole">this</a>, and multiple links look <a href="#">like this</a> and  <a href="#">like this</a>.</p>
+            <h4>Technologies used include:</h4>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>GRID</li>
+            </ul>
+            </div>
+            <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png" alt="Screenshot of the Wall of Wonder.">
+        </article>
+
+    </section>
+    </div>
+
+    <div class="gradient"></div>
+
     <div class="section-plum">
     <section id="contact">
         <h2>Contact me</h2>
@@ -45,7 +99,7 @@
     </div>
 
     <div class="gradient"></div>
-    
+
     <footer>
         <h2> Anamaria Cojocaru &middot; Economist</h2>
         <ul>
